Delete duplicate option and use of exiftool, hope God help me